--- a/Programming for Everybody-Getting started with Python/readme
+++ b/Programming for Everybody-Getting started with Python/readme
@@ -1,1 +1,7 @@
-
+Week 1 - Chapter One - Why we Program?
+Week 2 - Installing and Using Python
+Week 3 - Chapter One: Why We Program (continued)
+Week 4 - Chapter Two: Variables and Expressions
+Week 5 - Chapter Three: Conditional Code
+Week 6 - Chapter Four: Functions
+Week 7 - Chapter Five: Loops and Iteration
