--- a/Programming for Everybody-Getting started with Python/readme
+++ b/Programming for Everybody-Getting started with Python/readme
@@ -1,7 +1,10 @@
 Week 1 - Chapter One - Why we Program?
-Week 2 - Installing and Using Python
-Week 3 - Chapter One: Why We Program (continued)
-Week 4 - Chapter Two: Variables and Expressions
-Week 5 - Chapter Three: Conditional Code
-Week 6 - Chapter Four: Functions
-Week 7 - Chapter Five: Loops and Iteration
+Week 2 - Chapter Two: Variables and Expressions
+Week 3 - Chapter Three: Conditional Code
+Week 4 - Chapter Four: Functions
+Week 5 - Chapter Five: Loops and Iteration
+Week 6 - Chapter Six: Strings
+Week 7 - Chapter Seven: Files
+Week 8 - Chapter Eight: Lists
+Week 9 - Chapter Nine: Dictionaries
+Week 10 - Chapter Ten: Tuples
