--- a/Programming for Everybody-Getting started with Python/readme
+++ b/Programming for Everybody-Getting started with Python/readme
@@ -1,8 +1,13 @@
+Progamming for Everybody(Getting started with Python):
+
 Week 1 - Chapter One - Why we Program?
 Week 2 - Chapter Two: Variables and Expressions
 Week 3 - Chapter Three: Conditional Code
 Week 4 - Chapter Four: Functions
 Week 5 - Chapter Five: Loops and Iteration
+
+Python Data Structures:
+
 Week 6 - Chapter Six: Strings
 Week 7 - Chapter Seven: Files
 Week 8 - Chapter Eight: Lists
