--- a/Programming for Everybody-Getting started with Python/readme
+++ b/Programming for Everybody-Getting started with Python/readme
@@ -1,3 +1,5 @@
+The Course use TextBook Python for Informatics: Exploring Information by Dr. Charles R Severance.
+
 Progamming for Everybody(Getting started with Python):
 
 Week 1 - Chapter One - Why we Program?
