--- a/Programming for Everybody-Getting started with Python/readme
+++ b/Programming for Everybody-Getting started with Python/readme
@@ -1,4 +1,4 @@
-The Course use TextBook Python for Informatics: Exploring Information by Dr. Charles R Severance.
+The Course uses TextBook Python for Informatics: Exploring Information by Dr. Charles R Severance.
 
 Progamming for Everybody(Getting started with Python):
 
